<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckBoxActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:weightSum="0.6">
        <CheckBox
            android:layout_marginTop="30dp"
            android:id="@+id/checkbox01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_lomo"
            android:textSize="20sp"
            />
        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkbox02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_aji"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkbox03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_pollo"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkbox04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_ceviche"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkbox05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_pisco"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkbox06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato_Arroz"
            android:textSize="20sp"/>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <Button
                android:layout_centerInParent="true"
                android:id="@+id/btn_Mostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_mostrar"
                android:onClick="mostrar"
                />
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>